# geodesic_grid_dvr

./: CMakeLists.txt  LICENSE  README.md
config/: tf.vtf
data/gcrm_220km/: grid.nc
src/: Dir.cpp  Dir.h  GCRMMesh.cpp  GCRMMesh.h  HostArrayTemplate.h  IMesh.cpp  IMesh.h  NetCDFFile.cpp  NetCDFFile.h  NetCDFManager.cpp  NetCDFManager.h  main.cpp  netcdf_read.cpp  netcdf_read.h
src/shader/: gcrm_dvr.frag  gcrm_dvr.geom  gcrm_dvr_debug_distance_sphere.frag  gcrm_dvr_regular.frag  gcrm_hexagon_mesh.frag  gcrm_hexagon_mesh.vert  gcrm_hexagon_mesh_fill.geom  gcrm_hexagon_mesh_frame.geom  gcrm_triangle_mesh.frag  gcrm_triangle_mesh.geom  gcrm_triangle_mesh.vert  gcrm_triangle_resample.frag  gcrm_triangle_resample.geom  gcrm_triangle_resample.vert  grid_gcrm.frag  grid_gcrm.geom  grid_gcrm.vert
